--- a/foreground_styles.css
+++ b/foreground_styles.css
@@ -1,31 +1,21 @@
-.ce_main {
-    width: 400px;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    position: absolute;
-    z-index: 999999;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    color: white;
-    background-color: red;
-}
-
-#ce_name {
-    font-size: 70px;
-}
-
 #ce_button {
-    padding: 60px 30px;
-    border-radius: 5px;
-
-    font-size: 30px;
-
-    background-color: black;
-
+    background-color: #0a66c2;
+    color: white;
+    border: 1px solid #555555;
+    text-align: center;
+    font-size: 16px;
+    margin-left: 8px;
+    transition: 0.3s;
+    text-decoration: none;
     cursor: pointer;
+    border-radius: 1.59rem;
+    height:32px;
+    font-weight:600;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 2px;
+}
+
+#ce_button:hover {
+    opacity: 0.6;
 }
